Restructuring the Integration tests - so that they have their own src directory