@@ -28,6 +28,9 @@
 		<arquillian-bom.version>1.1.5.Final</arquillian-bom.version>
 		<junit.version>4.11</junit.version>
 		<arquillian-weld-ee-embedded-1.1.version>1.0.0.CR8</arquillian-weld-ee-embedded-1.1.version>
+		<arquillian-warp.version>1.0.0.Alpha7</arquillian-warp.version>
+		<arquillian-drone-bom.version>1.3.1.Final</arquillian-drone-bom.version>
+		<selenium-bom.version>2.42.2</selenium-bom.version>
 		<weld-core.version>2.2.4.Final</weld-core.version>
 		<h2.version>1.4.180</h2.version>
 		<hibernate-validator-cdi.version>5.1.2.Final</hibernate-validator-cdi.version>
@@ -54,6 +57,7 @@
 		<jacoco-maven-plugin.version>0.7.1.201405082137</jacoco-maven-plugin.version>
 		<findbugs-maven-plugin.version>3.0.0</findbugs-maven-plugin.version>
 		<maven-checkstyle-plugin.version>2.12.1</maven-checkstyle-plugin.version>
+		<build-helper-maven-plugin.version>1.9.1</build-helper-maven-plugin.version>
 
 		<!-- path to jdk on local machine - not sure what the behavior will be in any other environment -->
 
@@ -95,21 +99,20 @@
 				<version>${junit.version}</version>
 			</dependency>
 
-			<dependency>
-				<groupId>org.jboss.arquillian.extension</groupId>
-				<artifactId>arquillian-drone-bom</artifactId>
-				<version>1.3.1.Final</version>
-				<type>pom</type>
-				<scope>import</scope>
-			</dependency>
+			<!-- <dependency> <groupId>org.jboss.arquillian.extension</groupId> <artifactId>arquillian-drone-bom</artifactId> <version>${arquillian-drone-bom.version}</version> 
+				<type>pom</type> <scope>import</scope> </dependency> -->
+
+			<!-- <dependency> <groupId>org.jboss.arquillian.extension</groupId> <artifactId>arquillian-warp-bom</artifactId> <version>${arquillian-warp.version}</version> 
+				<type>pom</type> <scope>import</scope> </dependency> -->
 
 			<dependency>
 				<groupId>org.jboss.arquillian.selenium</groupId>
 				<artifactId>selenium-bom</artifactId>
-				<version>2.42.2</version>
+				<version>${selenium-bom.version}</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
+
 
 			<!-- <dependency> <groupId>org.jboss.weld</groupId> <artifactId>weld-core-bom</artifactId> <version>2.2.4.Final</version> 
 				<type>pom</type> <scope>import</scope> </dependency> -->
@@ -271,11 +274,14 @@
 			<scope>test</scope>
 		</dependency>
 
+		<!-- <dependency> <groupId>org.slf4j</groupId> <artifactId>slf4j-simple</artifactId> <scope>test</scope> </dependency> -->
+
 		<dependency>
 			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-simple</artifactId>
-			<scope>test</scope>
+			<artifactId>slf4j-log4j12</artifactId>
+			<version>1.7.2</version>
 		</dependency>
+
 
 		<dependency>
 			<groupId>org.jboss.arquillian.graphene</groupId>
@@ -285,10 +291,61 @@
 			<scope>test</scope>
 		</dependency>
 
+		<!-- <dependency> <groupId>org.jboss.arquillian.extension</groupId> <artifactId>arquillian-warp</artifactId> <version>${arquillian-warp.version}</version> 
+			<type>pom</type> <scope>test</scope> </dependency> -->
+
+		<dependency>
+			<groupId>org.jboss.arquillian.extension</groupId>
+			<artifactId>arquillian-warp-jsf</artifactId>
+			<version>${arquillian-warp.version}</version>
+			<scope>test</scope>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
 		<plugins>
+
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>build-helper-maven-plugin</artifactId>
+				<version>${build-helper-maven-plugin.version}</version>
+				<executions>
+
+					<!-- Add a new source directory to our build -->
+					<execution>
+						<id>add-integration-test-sources</id>
+						<phase>generate-test-sources</phase>
+						<goals>
+							<goal>add-test-source</goal>
+						</goals>
+						<configuration>
+							<!-- Configures the source directory of our integration tests -->
+							<sources>
+								<source>src/integration-test/java</source>
+							</sources>
+						</configuration>
+					</execution>
+
+					<!-- Add a new resource directory to our build -->
+<!-- 					<execution>
+						<id>add-integration-test-resources</id>
+						<phase>generate-test-resources</phase>
+						<goals>
+							<goal>add-test-resource</goal>
+						</goals>
+						<configuration>
+							<resources>
+								<resource>
+									??<filtering>true</filtering>??
+									<directory>src/integration-test/resources</directory>
+								</resource>
+							</resources>
+						</configuration>
+					</execution> -->
+				</executions>
+			</plugin>
 
 			<plugin>
 				<artifactId>maven-surefire-plugin</artifactId>
@@ -474,6 +531,7 @@
 						<configuration>
 							<forkCount>1</forkCount>
 							<reuseForks>true</reuseForks>
+							<!-- <argLine>-Xmx2048m -XX:MaxPermSize=1024m</argLine> -->
 							<systemPropertyVariables>
 								<java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
 								<jboss.home>${jboss.home}</jboss.home>
